<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="#0E6FFF"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="30dp"
            android:paddingEnd="15dp"
            android:paddingBottom="35dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dashboard"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/settings_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dashboard"
                android:src="@drawable/ic_settings" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_bar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-15dp"
            android:background="@drawable/bg_dashboard"
            android:elevation="10dp"
            android:paddingBottom="40dp">

            <TextView
                android:id="@+id/gm_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/good_morning"
                android:textColor="@color/secondary_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/figtree_600"
                android:text="@string/open_in_app"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gm_tv" />

            <LinearLayout
                android:id="@+id/chart_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_round_white"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_tv">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/overview"
                    android:textColor="@color/secondary_color" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp" />
            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/stats_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chart_ll">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_round_white"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/today_s_clicks"
                            android:src="@drawable/ic_clicks" />

                        <TextView
                            android:id="@+id/click_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/today_s_clicks"
                            android:textColor="@color/secondary_color"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:background="@drawable/bg_round_white"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/top_location"
                            android:src="@drawable/ic_location" />

                        <TextView
                            android:id="@+id/location_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:singleLine="true"
                            android:text="@string/ahemdabad"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/top_location"
                            android:textColor="@color/secondary_color"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:background="@drawable/bg_round_white"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/top_source"
                            android:src="@drawable/ic_web" />

                        <TextView
                            android:id="@+id/source_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:singleLine="true"
                            android:text="@string/instagram"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/top_source"
                            android:textColor="@color/secondary_color"
                            android:textSize="14sp" />

                    </LinearLayout>
                </LinearLayout>


            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/analytics_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_outline_grey"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stats_ll">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/view_analytics"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_analytics" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/link_options_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/analytics_ll">

                <RadioGroup
                    android:id="@+id/rg_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/top_links"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:background="@drawable/radio_selector"
                        android:button="@android:color/transparent"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/top_links"
                        android:textColor="@color/radio_text_selector" />

                    <RadioButton
                        android:id="@+id/recent_links"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/radio_selector"
                        android:button="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/recent_links"
                        android:textColor="@color/radio_text_selector" />

                </RadioGroup>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/search_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/search_content"
                    android:src="@drawable/ic_search" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/links_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/link_options_ll"
                tools:listitem="@layout/item_link" />

            <LinearLayout
                android:id="@+id/view_links_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_outline_grey"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/links_rv">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/view_all_links"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_links" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/whatsapp_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_whatsapp"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_links_ll">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:paddingStart="15dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="20dp"
                    android:text="@string/talk_with_us"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_whatsapp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/faq_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_faq"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/whatsapp_ll">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:paddingStart="15dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="20dp"
                    android:text="@string/faq"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_faq" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</ScrollView>